# face-recognize-sign-in-system

./: README.md  package.json
apis/: remote_signin.proto
backend/: Cargo.toml  build.rs  test.sqlite
backend/src/: database.rs  main.rs  services.rs
web/: package.json  pnpm-lock.yaml  rsbuild.config.mjs  tsconfig.json
web/scripts/: rpc.sh  run.js
web/src/: NotFoundPage.tsx  classroomClient.tsx  consts.less  faceApiLocal.tsx  global.d.ts  index.less  index.tsx
web/src/CapturePage/: SignedStudent.tsx  faceDescriptorDb.ts  faceRecognition.tsx  frameExtraction.ts  index.module.less  index.tsx  testDescriptors.ts
web/src/ClassroomPage/: index.module.less  index.tsx
web/src/CreateStudentPage/: LabeledField.module.less  LabeledField.tsx  index.module.less  index.tsx
web/src/SignInPage/: index.module.less  index.tsx  radioBtnBar.module.less  radioBtnBar.tsx
web/src/components/: iconButton.module.less  iconButton.tsx
