[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
tower = "*"                                                            # 不知道版本，只要和tonic匹配就行
tower-http = "*"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = "1.0"
bytemuck = "1.22"

[build-dependencies]
tonic-build = "*"
